Fixup r10k host variables
Change-Id: I8475ee4fecc432dba262bdea8ebb83dd69f83d5f

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -582,15 +582,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -607,15 +607,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-cloud'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-cloud'
@@ -632,15 +632,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -657,15 +657,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -682,15 +682,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'nectar-monash'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'nectar-monash'
@@ -707,15 +707,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -732,15 +732,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -757,15 +757,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -782,15 +782,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'tas-gerrit'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'tas-gerrit'
@@ -807,15 +807,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'resplat-hpc'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'resplat-hpc'
@@ -832,15 +832,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -857,15 +857,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -882,15 +882,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'puppet.test.rc.nectar.org.au'
+         r10khost: 'puppet.test.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -907,15 +907,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -932,15 +932,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
@@ -957,15 +957,15 @@
       - '{name}-r10k-deploy':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-cleanup':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-r10k-diff-catalog':
          access: 'nobody'
          organisation: 'internal'
-         r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+         r10khost: 'r10k.mgmt.rc.nectar.org.au'
       - '{name}-site-deploy':
          access: 'nobody'
          organisation: 'internal'
