Fixup r10k host variables
Change-Id: I8475ee4fecc432dba262bdea8ebb83dd69f83d5f

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -332,7 +332,7 @@
           # strips 'internal/puppet-site-nectar' to 'puppet-site-nectar'
           REPO=`echo $GERRIT_PROJECT | cut -f2 -d'/'`
           # Creates repo to hold r10k branches if it doesn't exist
-          respcode=`curl -H "Authorization: token $TOKEN" "https://git.rc.nectar.org.au/api/v1/repos/r10k/${REPO}" -w "%{http_code}" -o /dev/null -s`
+          respcode=`curl -H "Authorization: token $TOKEN" "https://git.rc.nectar.org.au/api/v1/repos/r10k/${{REPO}}" -w "%{{http_code}}" -o /dev/null -s`
           if [ $respcode = '404' ]; then
             curl -H "Authorization: token $TOKEN" https://git.rc.nectar.org.au/api/v1/org/r10k/repos -X POST -d name=$REPO
           fi
@@ -359,8 +359,8 @@
             git remote add r10k git@git.rc.nectar.org.au:r10k/$REPO
           fi
           git push r10k origin/master:refs/heads/master
-          git push r10k origin/master:refs/heads/r10k_diff_catalog_${PUPPET_ENV}
-          git ls-remote | grep "refs/changes/.*/${GERRIT_CHANGE_NUMBER}/[0-9]" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
+          git push r10k origin/master:refs/heads/r10k_diff_catalog_${{PUPPET_ENV}}
+          git ls-remote | grep "refs/changes/.*/${{GERRIT_CHANGE_NUMBER}}/[0-9]" | cut -f1 | xargs -n1 -ICOMMIT git push r10k :COMMIT
       - ssh-builder:
           ssh-user-ip: puppet@{r10k_host}:22
           command: r10k-cleanup.sh $GERRIT_PATCHSET_REVISION
