Don't run diff-catalog if deploy job running
diff job has a 30 second delay so it will ensure deploy job is run first

Change-Id: I8ed692d061bbd4f122f90b5628fbf421b4e5c75f

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1294,6 +1294,12 @@
     node: internal
     quiet-period: 30
 
+    properties:
+      - build-blocker:
+          blocking-jobs:
+            - "{name}-r10k-deploy"
+          block-level: 'GLOBAL'
+
     parameters:
       - string:
           name: GERRIT_REFSPEC
