--- a/other.yaml
+++ b/other.yaml
@@ -139,8 +139,75 @@
          choosing-strategy: gerrit
 
     builders:
-      - r10k-diff-catalog-puppet-library
-      - r10k-diff-catalog-puppet-library-test
+      - r10k-diff-catalog-puppet-library:
+          r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+
+    wrappers:
+      - ssh-agent-credentials:
+          users:
+              - '4946c3a5-9f5e-4eac-9ec4-90e1e348db14'
+      - ansicolor
+
+- job:
+    name: 'librarian-diff-library-test'
+    concurrent: false
+    defaults: global
+
+    node: internal
+
+    parameters:
+      - string:
+          name: GERRIT_REFSPEC
+          default: refs/heads/master
+          description: "The default ref to test."
+      - string:
+          name: GERRIT_BRANCH
+          default: master
+          description: "The default branch to test."
+
+    properties:
+      - authorization:
+          'nobody':
+            - job-read
+            - job-discover
+
+    triggers:
+      - gerrit:
+          trigger-on:
+              - patchset-created-event
+              - comment-added-contains-event:
+                   comment-contains-value: 'recheck'
+          projects:
+            - project-compare-type: 'PLAIN'
+              project-pattern: 'internal/puppet-library'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
+          silent: false
+          escape-quotes: true
+          trigger-for-unreviewed-patches: true
+          skip-vote:
+            successful: true
+            failed: true
+            unstable: true
+            notbuilt: true
+
+    scm:
+      - git:
+         url: ssh://jenkins@review.rc.nectar.org.au:29418/internal/puppet-library.git
+         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
+         refspec: $GERRIT_REFSPEC
+         branches:
+          - origin/$GERRIT_BRANCH
+         skip-tag: true
+         wipe-workspace: false
+         clean:
+           after: true
+         choosing-strategy: gerrit
+
+    builders:
+      - r10k-diff-catalog-puppet-library:
+          r10k_host: 'puppet.test.rc.nectar.org.au'
 
     wrappers:
       - ssh-agent-credentials:
