Set r10k build env based on prod or test
Change-Id: Id345931bf9b9ee7dff62155a5f3df29a34ff7fe2

--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -385,6 +385,7 @@
           ssh-user-ip: puppet@{r10k_host}:22
           command: |
             export R10K_HOST={r10k_host}
+            export R10K_BUILD_ENV={r10k_build_env}
             r10k-diff-catalog.py test-puppet-library $GERRIT_REFSPEC
 
 - builder:
