--- a/other.yaml
+++ b/other.yaml
@@ -141,6 +141,7 @@
     builders:
       - r10k-diff-catalog-puppet-library:
           r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+          r10k_build_env: 'production'
 
     wrappers:
       - ssh-agent-credentials:
@@ -208,6 +209,7 @@
     builders:
       - r10k-diff-catalog-puppet-library:
           r10k_host: 'puppet.test.rc.nectar.org.au'
+          r10k_build_env: 'testing'
 
     wrappers:
       - ssh-agent-credentials:
