--- a/other.yaml
+++ b/other.yaml
@@ -140,7 +140,7 @@
 
     builders:
       - r10k-diff-catalog-puppet-library:
-          r10k_host: 'r10k.mgmt.rc.nectar.org.au'
+          r10k_host: 'r10k.rc.nectar.org.au'
           r10k_build_env: 'production'
 
     wrappers:
