Add dummy job for nectar-loci
Change-Id: I78463c319097343045121f4a8218ee7f90cde4be

--- a/other.yaml
+++ b/other.yaml
@@ -461,3 +461,10 @@
       - '{name}-yaml':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
+
+- project:
+    name: nectar-loci
+    jobs:
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'internal'
