--- a/infrastructure.yaml
+++ b/infrastructure.yaml
@@ -14,3 +14,15 @@
       - trigger:
           project: tempest-rctest-cinder-check,tempest-rctest-compute-host-check,tempest-rctest-compute-host-check-advanced,tempest-rctest-designate-check,tempest-rctest-ec2api-check,tempest-octavia-smoke-rctest-check-coreservices,tempest-rctest-magnum-check,tempest-rctest-murano-check,tempest-rctest-neutron-check,tempest-rctest-scenario-check,tempest-rctest-trove-check,tempest-heat-scenario-rctest-check-coreservices,tempest-glance-scenario-rctest-check-site-agnostic-testing,tempest-swift-scenario-rctest-check-site-agnostic-testing,tempest-manila-cephfs-rctest-check-coreservices,tempest-telemetry-rctest-check-coreservices
           threshold: SUCCESS
+
+- project:
+    name: ansible-f5
+    jobs:
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'internal'
+         environment: 'linters'
+      - '{name}-bionic-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'internal'
+         environment: 'check'
