Add job for ec2api-tempest-plugin
Change-Id: I0881d2845581e02dc04c0887e5b75552f723544d

--- a/python.yaml
+++ b/python.yaml
@@ -334,6 +334,14 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: ec2api-tempest-plugin
+    jobs:
+      - '{name}-os-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+
+- project:
     name: external_naginator
     jobs:
       - '{name}-trusty-tox-{environment}':
