--- a/python.yaml
+++ b/python.yaml
@@ -344,15 +344,15 @@
 - project:
     name: external_naginator
     jobs:
-      - '{name}-trusty-tox-{environment}':
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py27'
-      - '{name}-trusty-tox-{environment}':
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'flake8'
-      - '{name}-trusty-deb-package':
+      - '{name}-focal-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
 
