Add container builds for nova, neutron and ceilometer
Change-Id: I996450effa0c73211e20aad92006a287248b0621

--- a/other.yaml
+++ b/other.yaml
@@ -468,3 +468,6 @@
       - '{name}-dummy':
          access: 'nobody'
          organisation: 'internal'
+      - 'requirements-container':
+         access: 'nobody'
+         organisation: 'internal'
