--- a/python.yaml
+++ b/python.yaml
@@ -374,6 +374,10 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+
 
 - project:
     name: cinder
@@ -465,6 +469,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
@@ -646,6 +653,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
