Add container builds for nova, neutron and ceilometer
Change-Id: I996450effa0c73211e20aad92006a287248b0621

--- a/python.yaml
+++ b/python.yaml
@@ -366,6 +366,10 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+
 
 - project:
     name: cinder
@@ -457,6 +461,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
@@ -638,6 +645,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
