--- a/python.yaml
+++ b/python.yaml
@@ -377,6 +377,10 @@
       - '{name}-os-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+
 
 - project:
     name: cinder
@@ -468,6 +472,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
@@ -649,6 +656,9 @@
          environment: 'pep8'
       - '{name}-os-deb-package':
          access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-containers':
+         access: 'nobody'
          organisation: 'NeCTAR-RC'
 
 - project:
