Add magnum container
Change-Id: I2e9719999fe26b1136d48163fb6561fdd9668b00

--- a/containers.yaml
+++ b/containers.yaml
@@ -104,6 +104,11 @@
                   build(job: 'neutron-containers')
                 }
               }
+              stage('Magnum') {
+                steps {
+                  build(job: 'magnum-containers')
+                }
+              }
             }
           }
         }
