CI rules for django-select2-forms
Change-Id: I45e02a5556894babbe0b69a2f6f5da3866218c5f

--- a/python.yaml
+++ b/python.yaml
@@ -928,6 +928,16 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: django-select2-forms
+    jobs:
+      - '{name}-bionic-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+      - '{name}-dummy':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: pfup
     jobs:
       - '{name}-bionic-tox-{environment}':
