Use vault password for nectar-ansible
Change-Id: Icc776f101a117ecb2202a98ab970f8a3eacef350

--- a/ansible.yaml
+++ b/ansible.yaml
@@ -140,3 +140,6 @@
            credential-id: 753d4c5e-f072-4916-b40f-a633157f8333
            username: F5_USERNAME
            password: F5_PASSWORD
+        - text:
+           credential-id: 5d3f798c-7bad-4594-881e-b83fdb211668
+           variable: ANSIBLE_VAULT_PASSWORD
