Add stein deb package job and use for nectar-tools
Change-Id: Id57ee1954b5048d2ac1da02f723352f865cc9e89

--- a/python.yaml
+++ b/python.yaml
@@ -90,7 +90,7 @@
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
          environment: 'cover'
-      - '{name}-bionic-deb-package':
+      - '{name}-stein-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
       - '{name}-focal-deb-package':
