--- a/builder-macros.yaml
+++ b/builder-macros.yaml
@@ -250,6 +250,7 @@
           bundle install --path vendor/bundle
           sed -i 's#^    permalink:.*#    permalink: /:collection/:name:output_ext#g' _config.yml  # hack for .html ext in swift
           bundle exec jekyll build --baseurl="/$BASEURL"
+          set +x
           OS_TOKEN=$(openstack token issue -c id -f value)
           SWIFTURL=https://swift.rc.nectar.org.au/$BASEURL
           tar -C $WORKSPACE/_site -zcf - . | curl -s -X PUT -H "X-Auth-Token: $OS_TOKEN" -H "X-Detect-Content-Type: true" -H "X-Delete-After: 7776000" --data-binary @- $SWIFTURL/?extract-archive=tar.gz
