Use lockable resource for nectar-ansible
Force the jobs to run in serial

Change-Id: I912a013e758f8c9c99cc6fe35e93569db1d5c494

--- a/ansible.yaml
+++ b/ansible.yaml
@@ -28,6 +28,9 @@
           'anonymous':
             - job-read
             - job-discover
+      - lockable-resources:
+          resources: nectar-ansible
+
 
     triggers:
       - gerrit:
@@ -91,6 +94,8 @@
           'anonymous':
             - job-read
             - job-discover
+      - lockable-resources:
+          resources: nectar-ansible
 
     triggers:
       - gerrit:
