Only allow one catalog-diff operation at a time
Change-Id: I1ff850a33047f960777f2d1595221949f0b4bd61

--- a/other.yaml
+++ b/other.yaml
@@ -103,6 +103,8 @@
           'nobody':
             - job-read
             - job-discover
+      - lockable-resources:
+          resources: 'diff-catalog-{r10k_host}'
 
     triggers:
       - gerrit:
