--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1261,6 +1261,9 @@
           blocking-jobs:
             - "{name}-r10k-deploy"
           block-level: 'GLOBAL'
+      - lockable-resources:
+          resources: 'diff-catalog-{r10k_host}'
+
 
     parameters:
       - string:
