Only allow one catalog-diff operation at a time
Change-Id: I1ff850a33047f960777f2d1595221949f0b4bd61

--- a/job-templates.yaml
+++ b/job-templates.yaml
@@ -1261,6 +1261,9 @@
           blocking-jobs:
             - "{name}-r10k-deploy"
           block-level: 'GLOBAL'
+      - lockable-resources:
+          resources: diff-catalog
+
 
     parameters:
       - string:
