Build focal packages for nectar-osc
Change-Id: Iab2ee669d0137e8d3c273d0ba35cdb4fe0ad9f2b

--- a/python.yaml
+++ b/python.yaml
@@ -67,6 +67,9 @@
       - '{name}-bionic-deb-package':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
+      - '{name}-focal-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
       - '{name}-pypi-upload':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
