--- a/images.yaml
+++ b/images.yaml
@@ -59,27 +59,22 @@
       - 'image-build-{name}'
 
 - project:
-    name: mysql-5.7-ubuntu-16.04-x86_64
+    name: mysql-5.7
     jobs:
       - 'image-build-trove-{name}'
 
 - project:
-    name: mysql-5.7-ubuntu-18.04-x86_64
+    name: mysql-8.0
     jobs:
       - 'image-build-trove-{name}'
 
 - project:
-    name: mysql-8.0-ubuntu-18.04-x86_64
+    name: postgresql-9.6
     jobs:
       - 'image-build-trove-{name}'
 
 - project:
-    name: postgresql-9.6-ubuntu-16.04-x86_64
-    jobs:
-      - 'image-build-trove-{name}'
-
-- project:
-    name: postgresql-11.3-ubuntu-18.04-x86_64
+    name: postgresql-11.3
     jobs:
       - 'image-build-trove-{name}'
 
@@ -214,50 +209,70 @@
 - job-template:
     name: 'image-build-trove-{name}'
     defaults: global
-    node: bionic
-
-    parameters:
-      - string:
-          name: GERRIT_REFSPEC
-          default: refs/heads/master
-          description: "The default ref to test."
-      - string:
-          name: GERRIT_BRANCH
-          default: master
-          description: "The default branch to test."
-
     properties:
       - authorization:
           nobody:
             - job-read
             - job-discover
-
-    scm:
-      - git:
-         url: ssh://jenkins@review.rc.nectar.org.au:29418/NeCTAR-RC/nectar-images.git
-         credentials-id: 4946c3a5-9f5e-4eac-9ec4-90e1e348db14
-         refspec: $GERRIT_REFSPEC
-         branches:
-          - origin/$GERRIT_BRANCH
-         skip-tag: true
-         wipe-workspace: true
-         clean:
-           after: true
-         choosing-strategy: gerrit
-
-    builders:
-      - image-builder-trove
-
-    wrappers:
-      - credentials-binding:
-        - username-password-separated:
-           credential-id: 7a2e4b77-a292-47a1-b852-c0cfd9c1c383
-           username: IMAGE_BUILDER_USERNAME
-           password: IMAGE_BUILDER_PASSWORD
-        - username-password-separated:
-           credential-id: 6c8091b5-0e7d-4be5-8458-4e5a999acdd6
-           username: IMAGE_PROMOTE_USERNAME
-           password: IMAGE_PROMOTE_PASSWORD
+    project-type: pipeline
+    sandbox: true
+    dsl: |
+        def imageId
+        def imageName
+        pipeline {
+            agent none
+            options {
+                preserveStashes(buildCount: 1)
+                ansiColor('xterm')
+            }
+            stages {
+                stage('Build Image') {
+                    agent { label 'bionic' }
+                    steps {
+                        imageBuildQEMU 'trove-{name}'
+                    }
+                }
+                stage('Deploy to Test Cloud') {
+                    agent {{ label 'bionic' }}
+                    steps {
+                        deployImage 'trove', 'testing'
+                        setImageProperties 'trove', 'testing'
+                    }
+                }
+                stage('Update trove datastore') {
+                    agent {{ label 'internal' }}
+                    steps {
+                        updateTroveDatastore 'testing'
+                    }
+                }
+                stage('Test Image in Test Cloud') {
+                    agent { label 'tempest' }
+                    steps {
+                        testTroveImage 'testing', 'coreservices'
+                    }
+                }
+                stage('Deploy to Production Cloud') {
+                    agent { label 'bionic' }
+                    steps {
+                        deployImage 'trove', 'production'
+                        setImageProperties 'trove', 'production'
+                    }
+                }
+            }
+            post {
+                failure {
+                    node('bionic') {
+                        deleteImage 'trove', 'testing'
+                        deleteImage 'trove', 'production'
+                        }
+                    }
+                cleanup {
+                    node('bionic') {
+                        deleteDir() /* clean up our workspace */
+                    }
+                }
+            }
+        }
 
 
 - job:
