Fix up job type for octavia amphora
Change-Id: I8e656db5ad38d3fa61acdc3ba4fb2a3959d6c181

--- a/images.yaml
+++ b/images.yaml
@@ -260,7 +260,7 @@
            password: IMAGE_PROMOTE_PASSWORD
 
 
-- project:
+- job:
     name: image-build-octavia-amphora
     defaults: global
     properties:
